--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-feather": "^2.0.9",
+    "react-responsive-carousel": "^3.2.23",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
